--- a/src/app/shared/dialog-box/dialog-box.component.html
+++ b/src/app/shared/dialog-box/dialog-box.component.html
@@ -1,4 +1,4 @@
-<button
+<!-- <button
   class="e-control e-btn"
   style="position: absolute;"
   id="targetButton"
@@ -17,3 +17,4 @@
   width="250px"
 >
 </ejs-dialog>
+ -->
