--- a/src/app/features/reports/checklist/checklist.component.html
+++ b/src/app/features/reports/checklist/checklist.component.html
@@ -19,6 +19,7 @@
           headerText="Voucher number"
           textAlign="Left"
           width="120"
+          foreignKeyValue="Debit"
         ></e-column>
         <e-column field="Date" headerText="Date" width="150"></e-column>
         <e-column
@@ -28,6 +29,17 @@
           [visible]="true"
         ></e-column>
       </e-columns>
+      <e-aggregates>
+        <e-aggregate>
+          <e-columns>
+            <e-column field="ReferenceNumber" type="sum">
+              <ng-template #footerTemplate let-data
+                >Sum: {{ data.sum }}</ng-template
+              >
+            </e-column>
+          </e-columns>
+        </e-aggregate>
+      </e-aggregates>
     </ejs-grid>
   </div>
 </div>
