--- a/src/app/features/accounts/accounts-view/accounts-view.component.html
+++ b/src/app/features/accounts/accounts-view/accounts-view.component.html
@@ -36,7 +36,7 @@
     <e-column
       field="AccountId"
       textAlign="left"
-      headerText="ID"
+      headerText="Account Id"
       type="number"
       width="30"
       editable="false"
@@ -49,7 +49,7 @@
     <e-column
       field="AccountName"
       textAlign="left"
-      headerText="Name"
+      headerText="Account Name"
       isPrimaryKey="false"
       type="string"
       editType="textbox"
