--- a/src/app/features/lookups/lookup-view/lookup-view.component.html
+++ b/src/app/features/lookups/lookup-view/lookup-view.component.html
@@ -8,6 +8,7 @@
   [columnsList]="columnBluePrint"
   [enableSearching]="true"
   [showColumnChooser]="true"
+  [enableSorting]="true"
   (dataQueried)="filterLookup($event)"
 >
 </app-data-view>
