--- a/src/app/features/reports/balance-sheet/balance-sheet.component.html
+++ b/src/app/features/reports/balance-sheet/balance-sheet.component.html
@@ -15,7 +15,7 @@
       <th>Asset</th>
     </tr>
     <tr *ngFor="let asset of data?.Assets">
-      <td>{{ asset.AccountCatagory }}</td>
+      <td>{{ asset.AccountCategory }}</td>
       <td>{{ asset.Amount }}</td>
     </tr>
     <tr>
@@ -26,7 +26,7 @@
       <th>Capital</th>
     </tr>
     <tr *ngFor="let capital of data?.Capitals">
-      <td>{{ capital.AccountCatagory }}</td>
+      <td>{{ capital.AccountCategory }}</td>
       <td>{{ capital.Amount }}</td>
     </tr>
     <tr>
@@ -37,7 +37,7 @@
       <th>Liabilities</th>
     </tr>
     <tr *ngFor="let liability of data?.Liabilities">
-      <td>{{ liability.AccountCatagory }}</td>
+      <td>{{ liability.AccountCategory }}</td>
       <td>{{ liability.Amount }}</td>
     </tr>
     <tr>
