--- a/src/app/shared/page-identity/page-identity.component.css
+++ b/src/app/shared/page-identity/page-identity.component.css
@@ -1,17 +1,20 @@
-div {
-
-  display: flex;
-  border-top: 1px solid lightseagreen;
-  height: 2.5em;
-}
-
-
 .title {
   width: 50%;
   float: left;
+  font-family: unset;
+  color: #4d841d;
+  font-size: x-large
 }
 
 .bread-crumb {
   width: 50%;
   float: left;
+  height: 3em;
+  color: #4d841d;
+  margin-left: 65%;
+}
+
+div {
+  display: flex;
+  align-items: center;
 }
