--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,12 +32,13 @@
         <ejs-dropdownlist
           id="year-dropdown"
           [dataSource]="yearData"
+          [fields]="yearFields"
           [width]="200"
           placeholder="Year"
         ></ejs-dropdownlist>
       </div>
 
-      <!--  <ejs-toolbar> 
+      <!--  <ejs-toolbar>
         <e-items> </e-items>
       </ejs-toolbar> -->
 
