--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -31,6 +31,7 @@
         ></button>
         <ejs-dropdownlist
           id="year-dropdown"
+          (valueChange)="yearChanged($event)"
           [dataSource]="yearData"
           [fields]="yearFields"
           [width]="200"
