--- a/src/app/features/reports/balance-sheet/balance-sheet.component.html
+++ b/src/app/features/reports/balance-sheet/balance-sheet.component.html
@@ -16,33 +16,33 @@
     </tr>
     <tr *ngFor="let asset of data?.Assets">
       <td>{{ asset.AccountCatagory }}</td>
-      <td>{{ asset.Amount }}</td>
+      <td>{{ asset.Amount | currency: "":"" }}</td>
     </tr>
     <tr>
       <td>Total current assets:</td>
-      <td>{{ data?.TotalAsset }}</td>
+      <td>{{ data?.TotalAsset | currency: "":"" }}</td>
     </tr>
     <tr>
       <th>Capital</th>
     </tr>
     <tr *ngFor="let capital of data?.Capitals">
       <td>{{ capital.AccountCatagory }}</td>
-      <td>{{ capital.Amount }}</td>
+      <td>{{ capital.Amount | currency: "":"" }}</td>
     </tr>
     <tr>
       <td>Net capital:</td>
-      <td>{{ data?.TotalAsset }}</td>
+      <td>{{ data?.TotalAsset | currency: "":"" }}</td>
     </tr>
     <tr>
       <th>Liabilities</th>
     </tr>
     <tr *ngFor="let liability of data?.Liabilities">
       <td>{{ liability.AccountCatagory }}</td>
-      <td>{{ liability.Amount }}</td>
+      <td>{{ liability.Amount | currency: "":"" }}</td>
     </tr>
     <tr>
       <td>Total current liabilities:</td>
-      <td>{{ data?.TotalAsset }}</td>
+      <td>{{ data?.TotalAsset | currency: "":"" }}</td>
     </tr>
   </tbody>
 </table>
