--- a/src/app/features/reports/income-statment/income-statment.component.css
+++ b/src/app/features/reports/income-statment/income-statment.component.css
@@ -7,3 +7,12 @@ div.content {
     display: none
   }
 }
+
+.e-control.e-btn.e-lib {
+  background-color: #4d841d;
+  color: white;
+}
+
+table {
+  font-family: 'Courier New', Courier, monospace;
+}
