--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,12 +29,15 @@
           isToggle="true"
           (click)="btnClick()"
         ></button>
+
         <ejs-dropdownlist
           id="year-dropdown"
           (valueChange)="yearChanged($event)"
           [dataSource]="yearData"
           [fields]="yearFields"
-          [width]="200"
+          [value]="'2011'"
+          [text]="'2011'"
+          [width]="100"
           placeholder="Year"
         ></ejs-dropdownlist>
       </div>
