--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,10 @@
+@import "../node_modules/@fortawesome/fontawesome-free/css/all.min.css";
+
 .e-search:before {
   content: '\e993';
 }
 
-@import "../node_modules/font-awesome/css/font-awesome.min.css";
+
 
 body {
   background-color: #ecf0f5 !important;
