--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -36,6 +36,7 @@
       </div>
     </ejs-sidebar>
   </div>
+  <div id="spinner-container"></div>
   <div class="content">
     <div>
       <div id="head" class="d-print-none">
@@ -71,7 +72,6 @@
         </div>
 
         <div class="main-content">
-          <i class="fas fa-ad"></i>
           <router-outlet></router-outlet>
         </div>
       </div>
