--- a/src/app/features/reports/balance-sheet/balance-sheet.component.html
+++ b/src/app/features/reports/balance-sheet/balance-sheet.component.html
@@ -4,6 +4,7 @@
     <button ejs-button (click)="print()">Print</button>
   </div>
 </div>
+<app-print-header [header]="'Balance sheet'"></app-print-header>
 <table class="table table-borderless">
   <thead>
     <tr>
