print header updated

--- a/src/app/features/ledgers/ledger-view/ledger-view.component.html
+++ b/src/app/features/ledgers/ledger-view/ledger-view.component.html
@@ -1,3 +1,4 @@
+<app-print-header [header]="'Ledger entries'"></app-print-header>
 <app-data-view
   [data]="data"
   [columnsList]="columnBluePrint"
