--- a/src/app/features/reports/checklist/checklist.component.html
+++ b/src/app/features/reports/checklist/checklist.component.html
@@ -8,6 +8,7 @@
   (filtered)="onFiltered($event)"
 ></app-filter-option>
 <div class="checklist-area">
+  <app-print-header [header]="'Checklist'"></app-print-header>
   <div class="print-area">
     <ejs-grid
       (actionComplete)="onActionComplete($event)"
