--- a/src/app/features/reports/consolidated-trial-balance/consolidated-trial-balance.component.html
+++ b/src/app/features/reports/consolidated-trial-balance/consolidated-trial-balance.component.html
@@ -1,4 +1,5 @@
 <app-filter-option></app-filter-option>
+<app-print-header [header]="'Consolidated trial balance'"></app-print-header>
 <div class="subsidary-area">
   <div class="print-area">
     <ejs-grid
