--- a/src/app/features/reports/subsidary-ledger-report/subsidary-ledger-report.component.html
+++ b/src/app/features/reports/subsidary-ledger-report/subsidary-ledger-report.component.html
@@ -1,5 +1,6 @@
 <app-filter-option></app-filter-option>
 <div class="subsidary-area">
+  <app-print-header [header]="'Subsidary ledgers'"></app-print-header>
   <div class="print-area">
     <ejs-grid
       #grid
