--- a/src/app/features/reports/income-statment/income-statment.component.html
+++ b/src/app/features/reports/income-statment/income-statment.component.html
@@ -4,6 +4,7 @@
     <button ejs-button (click)="print()">Print</button>
   </div>
 </div>
+<app-print-header [header]="'Income statment'"></app-print-header>
 <table class="table table-borderless">
   <thead>
     <tr>
