--- a/src/app/features/reports/trial-balance-detail/trial-balance-detail.component.html
+++ b/src/app/features/reports/trial-balance-detail/trial-balance-detail.component.html
@@ -1,5 +1,6 @@
 <app-filter-option></app-filter-option>
 <div class="subsidary-area">
+  <app-print-header [header]="'Trial balance detail'"></app-print-header>
   <div class="print-area">
     <ejs-grid
       #grid
