--- a/src/app/features/reports/subsidary-ledger-report/subsidary-ledger-report.component.html
+++ b/src/app/features/reports/subsidary-ledger-report/subsidary-ledger-report.component.html
@@ -1,4 +1,12 @@
-<app-filter-option></app-filter-option>
+<app-filter-option
+  [allowDateSearch]="true"
+  [allowAccountSearch]="true"
+  [allowVocherSearch]="true"
+  [allowCostCenterSearch]="true"
+  [allwoYearSeach]="true"
+  #filter
+  (filtered)="onFiltered($event)"
+></app-filter-option>
 <div class="subsidary-area">
   <app-print-header [header]="'Subsidary ledgers'"></app-print-header>
   <div class="print-area">
