--- a/src/app/features/account-catagory/account-catagory-view/account-catagory-view.component.html
+++ b/src/app/features/account-catagory/account-catagory-view/account-catagory-view.component.html
@@ -6,6 +6,7 @@
   [showUpdate]="true"
   (deleteRecord)="deleteCatagory($event)"
   [showPdfExport]="true"
+  [showPrint]="true"
   [columnsList]="columnBluePrint"
   [enableSearching]="true"
   [showColumnChooser]="true"
