integrated consolidated trial balance filter

--- a/src/app/features/reports/consolidated-trial-balance/consolidated-trial-balance.component.html
+++ b/src/app/features/reports/consolidated-trial-balance/consolidated-trial-balance.component.html
@@ -1,4 +1,8 @@
-<app-filter-option></app-filter-option>
+<app-filter-option
+  [allowDateSearch]="true"
+  #filter
+  (filtered)="onFiltered($event)"
+></app-filter-option>
 <app-print-header [header]="'Consolidated trial balance'"></app-print-header>
 <div class="subsidary-area">
   <div class="print-area">
