--- a/src/app/features/reports/balance-sheet/balance-sheet.component.html
+++ b/src/app/features/reports/balance-sheet/balance-sheet.component.html
@@ -1,4 +1,7 @@
-<app-filter-option></app-filter-option>
+<app-filter-option
+  [allowDateSearch]="true"
+  (filtered)="onFiltered($event)"
+></app-filter-option>
 <div class="row">
   <div class="col-3">
     <button ejs-button (click)="print()">Print</button>
